--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 <body>
   <main>
     <div class="pill">Hughes Virtual LLC</div>
-    <h1>Simulation, XR, and design</h1>
+    <h1>Simulation, XR, AI Conservational Solutions</h1>
     <p>Applied R&D for training and performance. Interoperability, embedded devices, and mixed reality.</p>
     <p>Orlando, Florida</p>
+    <p><a href="https://aics-sim.com/"> AICS, LLC</a></p>
     <p>Contact: <a href="mailto:darinehughes@gmail.com">darinehughes@gmail.com</a></p>
     <footer>© <span id="y"></span> Hughes Virtual LLC</footer>
   </main>
