--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Open Graph / Social previews -->
   <meta property="og:title" content="Hughes Virtual LLC" />
-  <meta property="og:description" content="Simulation, XR, and design. Applied R&D for training and performance." />
+  <meta property="og:description" content="Simulation, XR, Artificial Intelligence. Applied R&D for training and performance." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://darinehughes.github.io/" />
 
