--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
   <main>
     <div class="pill">Hughes Virtual LLC</div>
-    <h1>Simulation, XR, and design</h1>
+    <h1>Simulation, XR, Artificial Intelligence</h1>
     <p>Applied R&amp;D for training and performance. Interoperability, embedded devices, and mixed reality.</p>
 
     <div class="spacer"></div>
