--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hughes Virtual LLC</title>
-  <meta name="description" content="Hughes Virtual LLC - Simulation, XR, and design." />
+  <meta name="description" content="Hughes Virtual LLC - Simulation, XR, Artificial Intelligence." />
   <link rel="canonical" href="https://darinehughes.github.io/" />
 
   <!-- Favicon (Option A - Default dark background with light H) -->
