--- a/index.html
+++ b/index.html
@@ -1,48 +1,243 @@
-<img src="logo-hughes-virtual.svg" alt="Hughes Virtual logo" width="140">
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Hughes Virtual LLC - Conversational AI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Hughes Virtual LLC - conversational AI for training, coaching, and simulation.">
+  <style>
+    :root {
+      --bg: #f7f7f9;
+      --fg: #151515;
+      --muted: #666666;
+      --accent: #1f6feb;
+      --border: #dddddd;
+      --card-bg: #ffffff;
+      --max-width: 780px;
+    }
 
-# Hughes Virtual LLC
+    * {
+      box-sizing: border-box;
+    }
 
-### Conversational AI for training, coaching, and simulation
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: radial-gradient(circle at top left, #f0f4ff 0, #f7f7f9 40%, #f7f7f9 100%);
+      color: var(--fg);
+      line-height: 1.6;
+    }
 
-I design and build conversational AI systems for practice, coaching, and performance. My work lives at the intersection of dialog, assessment, and simulation, with a strong background in XR and medical training.
+    .page {
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      padding: 32px 16px 40px;
+    }
 
----
+    .content {
+      width: 100%;
+      max-width: var(--max-width);
+      background: var(--card-bg);
+      border-radius: 18px;
+      border: 1px solid var(--border);
+      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.04);
+      padding: 28px 22px 30px;
+    }
 
-## What I focus on
+    @media (min-width: 720px) {
+      .content {
+        padding: 32px 36px 36px;
+      }
+    }
 
-- **Conversational training avatars**  
-  Scenario driven AI characters for practice and coaching in education, customer interaction, and high stakes communication.
+    header {
+      display: flex;
+      align-items: center;
+      gap: 18px;
+      margin-bottom: 18px;
+    }
 
-- **Analytics and performance feedback**  
-  Rubric aligned scoring, targeted feedback, and experiment friendly data pipelines that support real learning outcomes.
+    header img {
+      width: 72px;
+      height: auto;
+    }
 
-- **Simulation and XR integration**  
-  Years of experience connecting AI and analytics to mixed reality training, embedded sensors, and live exercises.
+    header h1 {
+      margin: 0;
+      font-size: 1.7rem;
+      letter-spacing: 0.02em;
+    }
 
----
+    header p {
+      margin: 4px 0 0;
+      color: var(--muted);
+      font-size: 0.98rem;
+    }
 
-## Current work
+    h2 {
+      margin-top: 24px;
+      margin-bottom: 12px;
+      font-size: 1.2rem;
+    }
 
-**AICS, LLC**  
-Conversational AI for practice and coaching, using avatars like Sebastian and Morgan to help people rehearse real interactions and receive structured feedback.
+    p {
+      margin: 6px 0 10px;
+      font-size: 0.98rem;
+    }
 
-[Visit AICS, LLC](https://aics-sim.com)
+    .tagline {
+      font-size: 1.05rem;
+      margin-bottom: 14px;
+    }
 
----
+    .section-card {
+      border-radius: 14px;
+      border: 1px solid var(--border);
+      padding: 14px 16px 14px;
+      margin-bottom: 14px;
+      background: #fafbfc;
+    }
 
-## About Hughes Virtual
+    .section-card h3 {
+      margin-top: 0;
+      margin-bottom: 6px;
+      font-size: 1.02rem;
+    }
 
-Hughes Virtual LLC is an applied R&D studio based in Orlando, Florida. I work with partners across defense, education, and industry to:
+    .section-card p {
+      margin: 2px 0 4px;
+      font-size: 0.95rem;
+    }
 
-- Prototype and pilot conversational AI training tools  
-- Integrate AI and analytics with existing simulations and curricula  
-- Translate research concepts into working systems
+    .section-card ul {
+      margin: 4px 0 0 18px;
+      padding: 0;
+      font-size: 0.95rem;
+    }
 
-If you are interested in collaboration, pilots, or advisory work around conversational AI in training, I would be glad to talk.
+    .section-card li {
+      margin-bottom: 3px;
+    }
 
----
+    a {
+      color: var(--accent);
+      text-decoration: none;
+    }
 
-**Location:** Orlando, Florida  
-**Contact:** [darinehughes@gmail.com](mailto:darinehughes@gmail.com)  
+    a:hover {
+      text-decoration: underline;
+    }
 
-© Hughes Virtual LLC
+    .meta {
+      margin-top: 20px;
+      font-size: 0.92rem;
+      color: var(--muted);
+    }
+
+    .meta p {
+      margin: 2px 0;
+    }
+
+    footer {
+      margin-top: 18px;
+      padding-top: 10px;
+      border-top: 1px solid var(--border);
+      font-size: 0.84rem;
+      color: var(--muted);
+      display: flex;
+      justify-content: space-between;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    footer span {
+      white-space: nowrap;
+    }
+  </style>
+</head>
+<body>
+  <main class="page">
+    <div class="content">
+      <header>
+        <img src="logo-hughes-virtual.svg" alt="Hughes Virtual logo">
+        <div>
+          <h1>Hughes Virtual LLC</h1>
+          <p>Conversational AI for training, coaching, and simulation</p>
+        </div>
+      </header>
+
+      <p class="tagline">
+        I design and build conversational AI systems for practice, coaching, and performance. The work sits at the intersection of dialog, assessment, and simulation, with a deep background in XR and medical training.
+      </p>
+
+      <section>
+        <h2>What I focus on</h2>
+
+        <div class="section-card">
+          <h3>Conversational training avatars</h3>
+          <p>
+            Scenario driven AI characters for practice and coaching in education, customer interaction, and high stakes communication.
+          </p>
+        </div>
+
+        <div class="section-card">
+          <h3>Analytics and performance feedback</h3>
+          <p>
+            Rubric aligned scoring, targeted feedback, and experiment friendly data flows that support real learning outcomes.
+          </p>
+        </div>
+
+        <div class="section-card">
+          <h3>Simulation and XR integration</h3>
+          <p>
+            Experience connecting AI and analytics to mixed reality training, embedded sensors, and live exercises.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <h2>Current work</h2>
+
+        <div class="section-card">
+          <h3>AICS, LLC</h3>
+          <p>
+            Conversational AI for practice and coaching, with avatars like Sebastian and Morgan that let people rehearse real interactions and receive structured feedback.
+          </p>
+          <p>
+            <a href="https://aics-sim.com" target="_blank" rel="noopener noreferrer">Visit AICS, LLC</a>
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <h2>About Hughes Virtual</h2>
+
+        <p>
+          Hughes Virtual LLC is an applied R&amp;D studio based in Orlando, Florida. I work with partners across defense, education, and industry to:
+        </p>
+        <ul>
+          <li>Prototype and pilot conversational AI training tools</li>
+          <li>Integrate AI and analytics with existing simulations and curricula</li>
+          <li>Translate research concepts into working systems</li>
+        </ul>
+
+        <p class="meta">
+          If you are interested in collaboration, pilots, or advisory work around conversational AI in training, I would be glad to talk.
+        </p>
+      </section>
+
+      <section class="meta">
+        <p><strong>Location:</strong> Orlando, Florida</p>
+        <p><strong>Contact:</strong> <a href="mailto:darinehughes@gmail.com">darinehughes@gmail.com</a></p>
+      </section>
+
+      <footer>
+        <span>&copy; Hughes Virtual LLC</span>
+        <span>darinehughes.github.io</span>
+      </footer>
+    </div>
+  </main>
+</body>
+</html>
