--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <meta name="description" content="Hughes Virtual LLC - conversational AI for training, coaching, and simulation.">
   <style>
     :root {
-      --bg: #f7f7f9;
-      --fg: #151515;
-      --muted: #666666;
-      --accent: #1f6feb;
-      --border: #dddddd;
-      --card-bg: #ffffff;
+      --bg: #020617;
+      --fg: #f9fafb;
+      --muted: #9ca3af;
+      --accent: #60a5fa;
+      --border: #1f2937;
+      --card-bg: #020617;
+      --card-inner: #020617;
+      --panel-bg: #020617;
+      --chip-bg: #020617;
       --max-width: 780px;
     }
 
@@ -24,7 +27,7 @@
       margin: 0;
       padding: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top left, #f0f4ff 0, #f7f7f9 40%, #f7f7f9 100%);
+      background: radial-gradient(circle at top left, #111827 0, #020617 45%, #000000 100%);
       color: var(--fg);
       line-height: 1.6;
     }
@@ -39,10 +42,10 @@
     .content {
       width: 100%;
       max-width: var(--max-width);
-      background: var(--card-bg);
+      background: #020617;
       border-radius: 18px;
       border: 1px solid var(--border);
-      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.04);
+      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.6);
       padding: 28px 22px 30px;
     }
 
@@ -55,19 +58,22 @@
     header {
       display: flex;
       align-items: center;
-      gap: 18px;
+      gap: 20px;
       margin-bottom: 18px;
     }
 
     header img {
-      width: 72px;
+      width: 96px;
       height: auto;
+      display: block;
+      filter: invert(1);
     }
 
     header h1 {
       margin: 0;
-      font-size: 1.7rem;
+      font-size: 1.8rem;
       letter-spacing: 0.02em;
+      color: var(--fg);
     }
 
     header p {
@@ -76,10 +82,18 @@
       font-size: 0.98rem;
     }
 
+    @media (max-width: 640px) {
+      header {
+        flex-direction: row;
+        align-items: center;
+      }
+    }
+
     h2 {
       margin-top: 24px;
       margin-bottom: 12px;
       font-size: 1.2rem;
+      color: var(--fg);
     }
 
     p {
@@ -90,6 +104,7 @@
     .tagline {
       font-size: 1.05rem;
       margin-bottom: 14px;
+      color: var(--muted);
     }
 
     .section-card {
@@ -97,24 +112,27 @@
       border: 1px solid var(--border);
       padding: 14px 16px 14px;
       margin-bottom: 14px;
-      background: #fafbfc;
+      background: #020617;
     }
 
     .section-card h3 {
       margin-top: 0;
       margin-bottom: 6px;
       font-size: 1.02rem;
+      color: var(--fg);
     }
 
     .section-card p {
       margin: 2px 0 4px;
       font-size: 0.95rem;
+      color: var(--muted);
     }
 
     .section-card ul {
       margin: 4px 0 0 18px;
       padding: 0;
       font-size: 0.95rem;
+      color: var(--muted);
     }
 
     .section-card li {
