Revise index.html for conversational AI emphasis
Updated content to emphasize conversational AI focus and training applications.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
     name="description"
-    content="Hughes Virtual LLC - Simulation, XR, and AI systems for real world training and research."
+    content="Hughes Virtual LLC - Conversational AI, simulation, and XR systems for real world training and research."
   />
   <style>
     :root {
@@ -485,7 +485,7 @@
         <div class="logo" aria-hidden="true"></div>
         <div class="brand-text">
           <h1>Hughes Virtual LLC</h1>
-          <p>Simulation, XR, and AI for real world training</p>
+          <p>Conversational AI and simulation for training</p>
         </div>
       </div>
       <nav>
@@ -502,13 +502,13 @@
           <div>
             <div class="hero-pill">
               <span class="hero-pill-dot"></span>
-              Applied R and D studio for simulation, XR, and AI
+              Conversational AI for practice, feedback, and research
             </div>
-            <h2>Systems that train, measure, and adapt</h2>
+            <h2>Conversational AI that trains, measures, and adapts</h2>
             <p class="hero-sub">
-              I design and build multimodal training systems that combine extended reality, embedded hardware,
-              physiology engines, and AI driven analysis. Most of my work supports medical training, education,
-              and complex human performance problems.
+              I design and build conversational training systems that let people rehearse difficult interactions
+              with AI driven avatars, receive rubric aligned feedback, and connect results back into real
+              simulation, XR, and training programs.
             </p>
 
             <div class="hero-actions">
@@ -527,7 +527,8 @@
               <div>
                 <div class="hero-card-title">Recent focus</div>
                 <div class="hero-card-body">
-                  XR and AI systems for point of injury care, teacher training, and conversation coaching.
+                  Conversational AI platforms for educators and trainees, connected to analytics and, where
+                  needed, to XR and medical simulation.
                 </div>
               </div>
               <span class="hero-card-tag">Applied work</span>
@@ -535,20 +536,22 @@
             <ul class="hero-list">
               <li>
                 <span class="hero-bullet"></span>
-                XR care under fire training with physiology engines and embedded sensors.
+                AI avatars that rehearse parent teacher, student, and customer conversations with realistic
+                behavior.
               </li>
               <li>
                 <span class="hero-bullet"></span>
-                AI avatars that rehearse difficult conversations and provide rubric aligned feedback.
+                Scoring pipelines that translate messy dialogue into rubric aligned measures of performance.
               </li>
               <li>
                 <span class="hero-bullet"></span>
-                Analytics pipelines that show whether people are actually improving over time.
+                Integration paths into XR care under fire and medical training environments when physical or
+                virtual simulations are part of the program.
               </li>
             </ul>
             <div class="hero-card-footer">
               <div class="hero-card-footnote">
-                Projects span defense, education, and healthcare training.
+                Work spans education, defense, and healthcare training.
               </div>
               <a class="hero-card-link" href="#work">See current work</a>
             </div>
@@ -559,22 +562,22 @@
       <section id="focus" class="content-section">
         <h3>What Hughes Virtual focuses on</h3>
         <p>
-          Hughes Virtual sits at the intersection of simulation engineering, extended reality, and AI. The work
-          ranges from combat casualty care trainers and medical point of injury tools to conversational coaching
-          systems for teachers and students.
+          Hughes Virtual is a small applied R and D studio that sits at the intersection of conversational AI,
+          simulation engineering, and extended reality. The primary focus is on systems where people practice real
+          conversations, receive targeted feedback, and connect those results back to training goals.
         </p>
 
         <div class="grid" aria-label="Key focus areas">
           <div class="grid-item">
             <h4>Conversational training avatars</h4>
             <p>
-              Scenario based AI characters that let people rehearse difficult conversations and get targeted
-              feedback. Use cases include:
+              Scenario based AI characters that let people rehearse conversations and experiment with different
+              approaches. Use cases include:
             </p>
             <ul class="list-tight">
               <li>Teachers practicing conversations with parents or students</li>
-              <li>Customer facing staff preparing for high pressure interactions</li>
-              <li>Trainees working through coaching, support, and de escalation dialogues</li>
+              <li>Leaders and staff preparing for high pressure interactions</li>
+              <li>Trainees working through coaching, de escalation, and support dialogues</li>
             </ul>
           </div>
 
@@ -596,19 +599,19 @@
               Background in mixed reality, embedded devices, and medical simulation, including:
             </p>
             <ul class="list-tight">
-              <li>XR care under fire environments linked to AI and analytics</li>
+              <li>Linking conversational tools to XR care under fire environments</li>
               <li>Physiology engine integration for virtual casualties</li>
-              <li>Sensors, BLE devices, and instrumented medical tools</li>
+              <li>Sensors, BLE devices, and instrumented medical tools for point of injury training</li>
             </ul>
           </div>
         </div>
 
         <div class="pill-row">
+          <span class="pill">Conversational AI</span>
+          <span class="pill">Teacher and trainee coaching</span>
           <span class="pill">Simulation & XR</span>
           <span class="pill">Medical training</span>
-          <span class="pill">Conversation coaching</span>
           <span class="pill">Analytics & AAR</span>
-          <span class="pill">Embedded systems</span>
           <span class="pill">Research & evaluation</span>
         </div>
       </section>
@@ -634,12 +637,12 @@
           <div>
             <h4>Applied simulation R and D</h4>
             <p>
-              Through Hughes Virtual, I also support:
+              Through Hughes Virtual, I support projects that:
             </p>
             <ul class="list-tight">
-              <li>XR medical training and point of injury simulation systems</li>
-              <li>Integration of AI analytics with existing exercises and curricula</li>
-              <li>Design of pilots, studies, and evaluation plans for new tools</li>
+              <li>Extend conversational AI into larger training ecosystems and exercises</li>
+              <li>Connect dialogue analytics with XR medical and point of injury simulation systems</li>
+              <li>Design pilots, studies, and evaluation plans for new training tools</li>
             </ul>
           </div>
         </div>
@@ -650,25 +653,26 @@
         <div class="two-column">
           <div>
             <p>
-              Hughes Virtual LLC is my applied R and D studio. I work with partners across defense, education,
-              and industry to prototype and pilot simulation and AI driven training tools, integrate them with
-              existing programs, and evaluate how well they work in real settings.
+              Hughes Virtual LLC is my consulting and R and D studio. I work with partners across defense,
+              education, and industry to design conversational AI tools, integrate them with simulations and
+              curricula, and measure how they affect real performance.
             </p>
             <p>
-              I hold a PhD in Modeling and Simulation. My work spans XR medical trainers, point of injury systems
-              for live exercises, serious games, and AI powered conversation tools. I have collaborated with
-              research partners in the Department of Defense, universities, and industry, and have served as PI or
-              co PI on funded projects across several agencies.
+              I hold a PhD in Modeling and Simulation. My work spans conversational coaching platforms, XR medical
+              trainers, point of injury systems for live exercises, serious games, and accessibility oriented
+              virtual environments. I have collaborated with research partners in the Department of Defense,
+              universities, and industry, and have served as PI or co PI on funded projects across several
+              agencies.
             </p>
           </div>
           <div>
             <p class="contact-label">Selected strengths</p>
             <ul class="list-tight">
-              <li>System design for XR, AI, and embedded simulation systems</li>
+              <li>System design for conversational AI and training platforms</li>
+              <li>Scenario design that blends scripted structure with model flexibility</li>
+              <li>Rubric aligned analytics and after action reporting for dialogue</li>
               <li>Unity based interactive environments and mixed reality scenes</li>
-              <li>gRPC based services and data plumbing between tools</li>
-              <li>Rubric aligned analytics and after action reporting</li>
-              <li>Technical writing for proposals, papers, and documentation</li>
+              <li>Technical writing for proposals, studies, and publications</li>
             </ul>
           </div>
         </div>
@@ -677,8 +681,8 @@
       <section id="contact" class="content-section">
         <h3>Contact</h3>
         <p>
-          If you are interested in collaboration, pilots, or advisory work around simulation, XR, or
-          conversational AI in training, I would be glad to talk.
+          If you are interested in conversational AI pilots, integration with simulation and XR, or advisory work
+          around AI in training, I would be glad to talk.
         </p>
         <div class="contact-block">
           <span>
