Revise index.html with updated content and layout
Updated content and structure of the index.html file to provide more information about Hughes Virtual LLC and its services.

--- a/index.html
+++ b/index.html
@@ -4,177 +4,23 @@
   <meta charset="UTF-8" />
   <title>Hughes Virtual LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta
-    name="description"
-    content="Hughes Virtual LLC - Conversational AI and simulation for training."
-  />
-  <style>
-    :root {
-      --bg: #0b1120;
-      --fg: #f9fafb;
-      --muted: #9ca3af;
-      --accent: #38bdf8;
-      --max-width: 760px;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: var(--bg);
-      color: var(--fg);
-      line-height: 1.6;
-      -webkit-font-smoothing: antialiased;
-    }
-
-    a {
-      color: var(--accent);
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    .page {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 32px 16px;
-    }
-
-    main {
-      width: 100%;
-      max-width: var(--max-width);
-    }
-
-    header {
-      margin-bottom: 24px;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 1.9rem;
-      letter-spacing: 0.06em;
-      text-transform: uppercase;
-    }
-
-    h2 {
-      margin: 12px 0 8px;
-      font-size: 1.2rem;
-      color: var(--muted);
-      font-weight: 500;
-    }
-
-    section {
-      margin-bottom: 24px;
-    }
-
-    section h3 {
-      margin: 0 0 6px;
-      font-size: 1.05rem;
-    }
-
-    p {
-      margin: 0 0 6px;
-      color: var(--muted);
-      font-size: 0.98rem;
-    }
-
-    ul {
-      margin: 4px 0 0;
-      padding-left: 18px;
-      color: var(--muted);
-      font-size: 0.96rem;
-    }
-
-    li {
-      margin-bottom: 3px;
-    }
-
-    .contact {
-      margin-top: 10px;
-      font-size: 0.96rem;
-    }
-
-    footer {
-      margin-top: 16px;
-      padding-top: 10px;
-      border-top: 1px solid #1f2937;
-      font-size: 0.8rem;
-      color: var(--muted);
-    }
-  </style>
 </head>
 <body>
-  <div class="page">
-    <main>
-      <header>
-        <h1>Hughes Virtual LLC</h1>
-        <h2>Conversational AI and simulation for training</h2>
-      </header>
+  <h1>Hughes Virtual LLC</h1>
 
-      <section>
-        <h3>What I do</h3>
-        <p>
-          Hughes Virtual is my independent studio for applied work in conversational AI, simulation, and extended reality.
-          I build systems where people can practice real conversations, receive targeted feedback, and connect those
-          results back into training programs.
-        </p>
-      </section>
+  <p>
+    Hughes Virtual LLC is the independent studio of Darin Hughes.  
+    Current work centers on conversational AI, simulation, and training.
+  </p>
 
-      <section>
-        <h3>Focus areas</h3>
-        <ul>
-          <li>AI driven avatars for teacher, student, and customer conversations</li>
-          <li>Rubric aligned scoring and conversation analytics</li>
-          <li>Integration with simulation, XR, and medical training environments</li>
-          <li>System design and technical writing for research and proposals</li>
-        </ul>
-      </section>
+  <h2>Contact</h2>
+  <p>
+    Email: <a href="mailto:darinehughes@gmail.com">darinehughes@gmail.com</a><br />
+    Location: Orlando, Florida
+  </p>
 
-      <section>
-        <h3>Current work</h3>
-        <p>
-          I am a co founder and technical lead at
-          <a href="https://aics-sim.com" target="_blank" rel="noreferrer">AICS, LLC</a>,
-          a company focused on conversational AI for practice and coaching.
-        </p>
-        <p>
-          Through Hughes Virtual I also support projects that connect conversational tools to larger training ecosystems,
-          including XR medical and point of injury simulation systems.
-        </p>
-      </section>
-
-      <section>
-        <h3>About</h3>
-        <p>
-          I hold a PhD in Modeling and Simulation. My background spans XR medical trainers, point of injury systems,
-          serious games, accessibility oriented virtual environments, and conversational coaching platforms for education
-          and defense partners.
-        </p>
-      </section>
-
-      <section class="contact" id="contact">
-        <h3>Contact</h3>
-        <p>
-          Email: <a href="mailto:darinehughes@gmail.com">darinehughes@gmail.com</a><br />
-          Location: Orlando, Florida
-        </p>
-      </section>
-
-      <footer>
-        © <span id="year"></span> Hughes Virtual LLC
-      </footer>
-    </main>
-  </div>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+  <p>
+    This site is a work in progress.
+  </p>
 </body>
 </html>
