Update text and formatting in index.html

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
           <div>
             <div class="hero-pill">
               <span class="hero-pill-dot"></span>
-              Conversational AI for practice, feedback, and research
+              Conversational AI for practice, feedback, and training
             </div>
             <h2>Conversational AI that trains, measures, and adapts</h2>
             <p class="hero-sub">
@@ -562,7 +562,7 @@
       <section id="focus" class="content-section">
         <h3>What Hughes Virtual focuses on</h3>
         <p>
-          Hughes Virtual is a small applied R and D studio that sits at the intersection of conversational AI,
+          Hughes Virtual is a small applied R&D studio that sits at the intersection of conversational AI,
           simulation engineering, and extended reality. The primary focus is on systems where people practice real
           conversations, receive targeted feedback, and connect those results back to training goals.
         </p>
@@ -635,7 +635,7 @@
           </div>
 
           <div>
-            <h4>Applied simulation R and D</h4>
+            <h4>Applied simulation R&D</h4>
             <p>
               Through Hughes Virtual, I support projects that:
             </p>
@@ -653,7 +653,7 @@
         <div class="two-column">
           <div>
             <p>
-              Hughes Virtual LLC is my consulting and R and D studio. I work with partners across defense,
+              Hughes Virtual LLC is my consulting and R&D studio. I work with partners across defense,
               education, and industry to design conversational AI tools, integrate them with simulations and
               curricula, and measure how they affect real performance.
             </p>
@@ -699,7 +699,7 @@
 
     <footer>
       <span>© <span id="year"></span> Hughes Virtual LLC</span>
-      <span>Site: darinehughes.github.io</span>
+      <span>Hughes Virtual</span>
     </footer>
   </div>
 
